test_data/valid/1.3_plate_on_brick.ldr
0 Plate on brick
1 4 0 -24 0 1 0 0 0 1 0 0 0 1 3001.dat
1 15 0 -32 0 1 0 0 0 1 0 0 0 1 3020.dat